--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ h1 {
     color: black;
 }
 
+
+
 body {
     margin: 0;
     background-color:#DBC069;
@@ -105,7 +107,7 @@ img {
     width: 100%;
     max-width: 750px;
     margin: 0 auto;
-    color: white;
+    color: white
 }
 
 .Backgroundfordropdown {
