--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
 }
 
 
-body {
+root {
     display: grid;
     grid-template-rows: min-content min-content auto min-content;
     grid-template-areas: 
@@ -151,7 +151,7 @@ img {
 }
 
 @media (min-width: 612px) {
-    body {
+    root {
         grid-template-columns: 150px auto;
         grid-template-rows: min-content auto min-content;
         grid-template-areas: 
